<resources>
    <string name="app_name">The Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_use_celsius">Use °C</string>
    <string name="action_use_fahrenheit">Use °F</string>
    <string name="action_use_km">Use km</string>
    <string name="action_use_mi">Use mi</string>
    <string name="action_use_24_hr_clock">Use 24hr clock</string>
    <string name="action_use_12_hr_clock">Use 12hr clock</string>
    <string name="action_manage_locations">Manage locations</string>

    <string name="degreesF">°F</string>
    <string name="degreesC">°C</string>

    <!-- Main Activity -->
    <string name="minimum_temperature_F">%1$d°F</string>
    <string name="maximum_temperature_F">%1$d°F</string>
    <string name="minimum_temperature_C">%1$d°C</string>
    <string name="maximum_temperature_C">%1$d°C</string>
    <string name="humidity_percentage">Humidity %1$d%%</string>
    <string name="wind_mi">Wind %1$dmph %2$s</string>
    <string name="wind_km">Wind %1$dkm/h %2$s</string>
    <string name="cloudiness_percentage">Cloudiness %1$d%%</string>

    <string name="no_network_title">Alert</string>
    <string name="no_network_body">No network connection</string>
    <string name="gps_required_title">Alert</string>
    <string name="gps_required_body">GPS Required</string>
    <string name="permission_required_title">Alert</string>
    <string name="permission_required_body">Location permission required</string>
    <string name="loading">Loading…</string>
    <string name="weather_in">Weather in</string>

    <string name="manage_locations">Manage Locations</string>
    <string name="remove">REMOVE</string>
    <string name="rename">RENAME</string>
    <string name="no_locations_to_display">No locations to display</string>
    <string name="current_location">Current Location</string>
    <string name="current_location_brackets_name">Current Location (%1$s)</string>
    <string name="add_location_ellipses">Add Location…</string>
    <string name="expand">Expand</string>

    <string name="places_api_key">AIzaSyBvqZgpGDQroCJQ7XXP9n6_z2Wd5NMfyfw</string>
    <string name="weather_query_hint">Search Weather</string>
</resources>
