<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".activity.MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tv_messaging"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loading"
                android:gravity="center"
                android:visibility="gone"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_weather_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- Temperature -->

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/temperature_text_size"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"/>

                <TextView
                        android:id="@+id/tv_temperature_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/temperature_unit_text_size"
                        android:textColor="@color/lightGrey"
                        android:layout_toEndOf="@id/tv_temperature"
                        android:layout_marginTop="@dimen/temperature_unit_margin_top"/>

            </RelativeLayout>

            <!-- Weather Description -->

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_weather_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/weather_description_text_size"
                        android:layout_centerInParent="true"/>

                <ImageView
                        android:id="@+id/iv_weather_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_weather_description"
                        android:layout_centerVertical="true"
                        tools:ignore="ContentDescription" />

            </RelativeLayout>

            <!-- Location Name -->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_location_and_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/location_and_time_text_size" />

            </RelativeLayout>

            <!-- Humidity -->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/humidity_text_size"/>

            </RelativeLayout>

            <!--Max temperature-->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_maximum_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/maximum_temperature_text_size"/>

            </RelativeLayout>

            <!--Min temperature-->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_minimum_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/minimum_temperature_text_size"/>

            </RelativeLayout>

            <!--Wind-->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/wind_text_size"/>

            </RelativeLayout>

            <!--Cloudiness-->

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/tv_cloudiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/cloudiness_text_size"/>

            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>